style.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Titan+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');



/* 
==================
= Global Designs =
==================
*/

:root {
    --accent-color: #863d51;
}

* {
    padding: 0;
    margin: 0;
}

iframe {
    z-index: 9999;
}


/* Background Video */
.hero {
    position: relative;
    height: 100vh;
    overflow: hidden;
}

.hero::after {
    content: "";
    position: absolute;
    inset: 0;
    background: rgba(0, 0, 0, 0.562);
}

#bg-video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: -1;
}

.hero nav {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}

.hero header {
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1;
    text-align: center;
}

nav {
    z-index: 2;
}

.hero header {
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
    text-align: center;
}



/* Navbar */
.savina-navbar-mobile {
    display: none;
}

nav {
    grid-area: nav;
    display: flex;
    align-items: center;
}

nav ul {
    display: flex;
    margin: 0 auto;
    gap: 1rem;
    align-items: center;
}

.cv {

    position: relative;
    isolation: isolate;
    margin: 2em 3em;
    letter-spacing: .2em;
    padding: .5em 1.2em;
    font-weight: 100;
    font-size: 1.15em;
    cursor: pointer;
}

.cv::before {
    content: "";
    position: absolute;
    inset: 0;
    background: var(--accent-color);
    transform: skew(340deg);
    z-index: 0;
}

.cv:hover::before {
    background: #7c3b4c;
}

.cv a {
    position: relative;
    color: white;
    z-index: 1;
    font-weight: 500;
}

.savina-navbar {
    width: auto;
    max-width: none;
    font-size: 2.8em;
    letter-spacing: .05em;
    color: var(--accent-color);
    font-weight: 1000;
    align-self: center;
    margin: 0;
}

nav .icons {
    margin-left: 1.5em;
}

nav i,
.contact-me i {
    padding: .25em;
    font-size: 1.2em;
    color: #e4e4e4;

}

.icons a .contact-me .icons a .contact-me a {
    display: inline-flex;
    width: 45px;
    height: 45px;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    color: #091114;
    transition:
        transform 0.3s ease,
        color 0.3s ease,
        text-shadow 0.3s ease;
}


/* LinkedIn */
.icons a:nth-child(1):hover,
.contact-me a:nth-child(1):hover {
    color: white;
    text-shadow:
        0 0 10px #0ce5da,
        0 0 20px #0ce5da;
    transform: translateY(-3px) scale(1.1);
}


/* Instagram */
.icons a:nth-child(2):hover,
.contact-me a:nth-child(2):hover {
    color: white;
    text-shadow:
        0 0 8px #833ab4,
        0 0 16px #c13584;
    transform: translateY(-3px) scale(1.1);
}


/* Email */
.icons a:nth-child(3):hover,
.contact-me a:nth-child(3):hover {
    color: white;
    text-shadow:
        0 0 8px #dfc1c1,
        0 0 16px #c13584;
    transform: translateY(-3px) scale(1.1);
}

nav li {
    list-style: none
}

nav a {
    margin: 0.5em;
    margin: .2em;
    font-weight: 600;
    text-transform: uppercase;
    text-decoration: none;
}

nav ul a {
    position: relative;
    letter-spacing: .1em;
    padding: 0 10px;
    display: block;
    color: #fff;
    font-weight: 200;
    font-size: 1.2em;
    line-height: 2em;
}

nav ul a.underline-anim::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: -3px;
    width: 100%;
    height: 2px;
    background: white;
    transform: scaleX(0);
    transform-origin: center;
    transition: transform 0.4s ease;
}

nav ul a:hover::after {
    transform: scaleX(1);
}



/* Header */
header {
    background-color: transparent;
    color: white;
    grid-area: header;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

header div {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

header h1 {
    text-transform: uppercase;
    letter-spacing: .03em;
    padding: 0em .15em;
    font-size: 5em;
    line-height: 85px;
    font-weight: 900;
}

header div h1 {
    font-family: "Montserrat", sans-serif;
    background: linear-gradient(110deg, #ffffff, var(--accent-color));
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

header>h1 {
    font-size: 3em;
    font-weight: 400;
    line-height: 60px;
    letter-spacing: 10px;
}



/* Headers without the background video */
.hero-film,
.hero-media,
.hero-tv,
.hero-about {
    background: linear-gradient(180deg, #5e2a53, #30162b, #7e4372, #0f0f0f);
    height: min-content;
}

.film,
.media,
.tv,
.about {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    margin: 7% 0;
    height: 100%;
}

.film h1,
.media h1,
.tv h1,
.about h1 {
    font-family: "Montserrat", sans-serif;
    font-size: 3em;
    font-weight: 900;
    text-transform: uppercase;
    letter-spacing: .1em;
    color: var(--accent-color);
}

.film div,
.media div,
.tv div {
    display: flex;
    margin-top: 3%;
    max-width: 50rem;
    width: 80%;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.film iframe,
.media iframe,
.tv iframe {
    width: 100%;
    aspect-ratio: 16 / 9;
    border-radius: 1em;
    cursor: pointer;
    border: none;
}

.tv iframe {
    width: 75%;
}


/* About */
.about-container {
    display: flex;

    max-width: 50rem;
    width: 40%;
    margin: 3em 0;
    border: 2px solid #09111436;
    border-top-left-radius: 2em;
    border-top-right-radius: 2em;
    border-bottom-right-radius: .4em;
    border-bottom-left-radius: .4em;
    flex-direction: column-reverse;
}
/* ... */

